--- a/webcomponents/index.html
+++ b/webcomponents/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>My Web Component</title>
+		<title>OEB Web Components</title>
 		<base href="/" />
 	</head>
 	<body>
