--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 
+		<!-- Google Material Icons -->
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
 		<style type="text/css">
 			@keyframes loading-fade {
 				0% {
@@ -92,12 +95,6 @@
 
 		<script defer src="https://sibforms.com/forms/end-form/build/main.js"></script>
 
-		<!-- Include umami tracking -->
-		<script
-			defer
-			src="https://umami.opensenselab.org/script.js"
-			data-website-id="63bed671-0424-436a-bcbc-9503b70482d9"
-		></script>
 
 		<!-- It's commented out till we figure out if this is the best option to resvole 'marked is not defined' console error -->
 		<!-- To resolve 'marked is not defined' when relaoding create-badge page -->
